tests/paczka1/small_fuzzy/59356688.err
Error in line 7: m5VMOyGrIg A460 4,53
Error in line 2: oSvrx1fcvk S676 97,1
Error in line 5: 9XOAnuIg S194 75,4
